--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,16 @@
 {
-  "extends": "react-app"
+  "parser": "babel-eslint",
+
+  "ecmaFeatures": {
+    "jsx": true
+  },
+
+  "env": {
+    "es6": true,
+    "jasmine": true,
+  },
+
+  "plugins": [
+    "react"
+  ],
 }
