--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-react-native": "^2.3.2",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.2",
     "react-redux": "^5.0.5",
